--- a/index.css
+++ b/index.css
@@ -1,158 +1,312 @@
 body {
-    background-color: gainsboro;
-    width: 800px;
-    margin: auto;
+  background-color: gainsboro;
+  width: 800px;
+  margin: auto;
 }
 
 header {
-    background-color: gold;
-    height: 40vh;
+  display: none;
+  background-color: gold;
+  height: 40vh;
 }
-.gridHeader{
-    position: relative;
-    background-color: yellowgreen;
-    height: 100%;
-    display: grid;
-    
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-    
-    grid-template-areas:
+.gridHeader {
+  position: relative;
+  background-color: yellowgreen;
+  height: 100%;
+  display: grid;
+
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+
+  grid-template-areas:
     "topLeft topRight"
     "bottomLeft bottomRight";
 }
-.topLeft{
-    
-    /* width: 60%; */
-    
-    /* text-align: center; */
-    /* position: absolute; */
-    /* left: 25%; */
-    padding: 10% 15%;
-    box-sizing: content-box;
-    grid-area: topLeft;
-    background-color: rgb(186, 218, 245);
-    
+.topLeft {
+  /* width: 60%; */
+
+  /* text-align: center; */
+  /* position: absolute; */
+  /* left: 25%; */
+  padding: 10% 15%;
+  box-sizing: content-box;
+  grid-area: topLeft;
+  background-color: rgb(186, 218, 245);
 }
-.topLeft>span{
-    font-size: 2rem;
-    font-weight: bolder;
+.topLeft > span {
+  font-size: 2rem;
+  font-weight: bolder;
 }
-.topLeft p span{
-    color: white;
+.topLeft p span {
+  color: white;
 }
 
-.joinButton{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    text-decoration: none;
-    background-color: white;
-    /* padding: 1% 3%; */
-    width:30%;
-    height: 15%;
-    border-radius: 40px;
-    box-shadow: 0 0 5px 1px gray;
+.joinButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  font-weight: bold;
+  font-size: 0.6rem;
+  /* padding: 1% 3%; */
+  border-radius: 40px;
+  box-shadow: 0 0 5px 1px gray;
 }
-.bottomLeft{
-    grid-area: bottomLeft;
-    background-color: rgb(186, 218, 245);
-    background-image: url("img/family.png");
-    background-position: 90%;
-    background-origin: border-box;
-    background-size: 55% 100%;
-    background-repeat: no-repeat;
-    position: relative;
+header .joinButton {
+  width: 30%;
+  height: 15%;
+  border-radius: 40px;
+  box-shadow: 0 0 5px 1px gray;
 }
-.bottomLeft .joinButton{
-    position: absolute;
-    left: 20%;
-    top: 25%;
-    
+.bottomLeft {
+  grid-area: bottomLeft;
+  background-color: rgb(186, 218, 245);
+  background-image: url("img/family.png");
+  background-position: 90%;
+  background-origin: border-box;
+  background-size: 55% 100%;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.bottomLeft .joinButton {
+  position: absolute;
+  left: 20%;
+  top: 25%;
 }
 
-.topRight, .bottomRight{
-    font-size: 1rem; 
-    text-align: center;
-    padding-top: 20%;
-} 
-.gridHeader h6{
-    margin: 0;
-    padding: 0; 
-    
+.topRight,
+.bottomRight {
+  font-size: 1rem;
+  text-align: center;
+  padding-top: 20%;
 }
-.topRight{
-    grid-area: topRight;
-    background-color: tomato;
+.gridHeader h6 {
+  margin: 0;
+  padding: 0;
 }
-.bottomRight{
-    
-    grid-area: bottomRight;
-    background-color: orange;
+.topRight {
+  grid-area: topRight;
+  background-color: tomato;
 }
-.topRight span:nth-child(2), .bottomRight span:nth-child(2){
-    font-size: 1.8em; 
-    font-weight: bold;
-    color: white;        
-} 
+.bottomRight {
+  grid-area: bottomRight;
+  background-color: orange;
+}
+.topRight span:nth-child(2),
+.bottomRight span:nth-child(2) {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: white;
+}
 
-nav{
-    display: flex;
-    justify-content: center;
-    position: sticky;
-    width: 100%;
-    top: 0;
-    background-color: gainsboro;
+nav {
+  display: none;
+  justify-content: center;
+  position: sticky;
+  width: 100%;
+  top: 0;
+  background-color: gainsboro;
 }
 .navContainer {
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 5vh;
-    width: 60%;
-    /* background-color: hotpink; */
-    margin: auto;
-    
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 5vh;
+  width: 60%;
+  /* background-color: hotpink; */
+  margin: auto;
 }
-
+.navItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 20%;
+  text-decoration: none;
+  color: rgb(110, 110, 110);
+}
+.navItem:hover {
+  border-right: solid 1px black;
+  border-left: solid 1px black;
+  border-collapse: collapse;
+  box-sizing: border-box;
+  color: black;
+  text-shadow: 0 0 5px white;
+}
 
 .mainContent {
-    display: block;
-    background-color: lawngreen;
-    height: 150vh;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: svg;
+  height: 75vh;
+  padding: 5% 8%;
+  background: -webkit-linear-gradient(top, grey 50%, orange 10%);
 }
 
+.personalSafety {
+  display: flex;
+
+  /* justify-content: space-b; */
+  /* background-color: teal; */
+  height: 30%;
+}
+
+.personalSafety > div {
+  width: 50%;
+  height: 100%;
+  /* background-color: blueviolet; */
+}
+
+.personalSafety > div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  height: 100%;
+  width: 50%;
+  padding-right: 10%;
+  /* border: 1px solid black; */
+  box-sizing: border-box;
+}
+.personalSafety > div:nth-child(2) {
+  /* background-color: blanchedalmond; */
+  padding: 0 8%;
+  box-sizing: border-box;
+}
+.personalSafety p {
+  padding: 0;
+  margin: 0;
+}
+.personalSafety div > span {
+  color: white;
+  font-size: 2rem;
+}
+.personalSafety .joinButton {
+  width: 45%;
+  height: 15%;
+  position: relative;
+  bottom: ;
+}
+.portraits {
+  display: flex;
+  /* justify-content: space-between; */
+  /* position: relative; */
+  margin: 1% 0;
+  height: 30%;
+  /* background-color: blue; */
+  font-size: 0.8rem;
+  /* display: inline-block; */
+}
+.portraits > div {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 2%;
+  padding: 0;
+  height: 100%;
+  width: 33%;
+  background-color: white;
+  border-radius: 2%;
+}
+.portraits p {
+  margin: 0;
+  padding: 0;
+}
+
+.image_container {
+  height: 50%;
+  background-color: cyan;
+  width: 90%;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  transform: translate(0, -13%);
+  border-radius: 2%;
+}
+.text_container {
+  text-align: center;
+  height: 50%;
+  margin: auto;
+  width: 80%;
+  overflow: hidden;
+}
+.text_container > * {
+  margin: 2%;
+}
+.child {
+  background-color: rgb(186, 218, 245);
+  background-image: url("img/child_cropped.png");
+  background-size: 35%;
+}
+.adult {
+  background-color: orange;
+  background-image: url("img/adult_cropped.png");
+  background-size: 40%;
+}
+.old {
+  background-color: tomato;
+  background-image: url("img/old_cropped.png");
+  background-size: 55%;
+}
+.aboutUs {
+  text-align: center;
+  /* background-color: red; */
+  height: 30%;
+  width: 50%;
+  /* margin: 7% auto; */
+}
+.aboutUs h1 {
+  color: white;
+  font-size: 1.5rem;
+}
+.aboutUs p {
+  font-size: 0.8rem;
+}
 .gridSection {
-    height: 40vh;
-    background-color: lightseagreen;
-    display: none;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 50%);
+  display: grid;
+  height: 480px;
+  /* width: 100%; */
+  background-color: lightseagreen;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 50%);
 }
 .gridItem {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px dotted wheat;
-    background-color: yellow;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px dotted wheat; */
+  background-color: white;
+  box-sizing: border-box;
 }
 .gridItem:first-child {
-    font-weight: bold;
-    font-size: 2rem;
-    wor
+  font-weight: bold;
+  font-size: 2rem;
+  background-color: rgb(186, 218, 245);
 }
-.gridItem span {
-    /* align-self: flex-start; */
-    position: relative;
-    left: -15%;
-    top: -25%;
-    padding: 0;
-    margin: 0;
-    background-color: violet;
+.gridItem:nth-child(3) {
+  background-color: gainsboro;
+}
+.gridItem:nth-child(5) {
+  background-color: tomato;
+}
+.cornerNumber {
+  /* align-self: flex-start; */
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  padding: 0;
+  margin: 0;
+  font-size: 1.5rem;
+  opacity: 0.4;
 }
 footer {
-    text-align: center;
-    background-color: maroon;
+  display: none;
+  text-align: center;
+  background-color: maroon;
 }
