--- a/index.css
+++ b/index.css
@@ -1,21 +1,23 @@
 body {
   background-color: gainsboro;
-  width: 800px;
+  width: 80vw;
   margin: auto;
+  /* font-size: 16px; */
 }
 p {
-  font-family: Times;
 }
 
 header {
   display: flex;
   background-color: gold;
-  height: 40vh;
+  height: 40vw;
+  width: 100%;
 }
 .gridHeader {
   position: relative;
   background-color: yellowgreen;
   height: 100%;
+  width: 100%;
   display: grid;
 
   grid-template-columns: 50% 50%;
@@ -31,14 +33,26 @@ header {
   /* text-align: center; */
   /* position: absolute; */
   /* left: 25%; */
-  padding: 10% 15%;
-  box-sizing: content-box;
+  padding-top: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  box-sizing: border-box;
   grid-area: topLeft;
   background-color: rgb(186, 218, 245);
+  font-family: Times, serif;
 }
 .topLeft > span {
+  display: block;
+  /* width: 100%; */
   font-size: 2rem;
   font-weight: bolder;
+}
+.topLeft p {
+  padding: 0;
+  margin: 0;
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+  width: 88%;
 }
 .topLeft p span {
   color: white;
@@ -52,16 +66,15 @@ header {
   text-decoration: none;
   background-color: white;
   font-weight: bold;
-  font-size: 0.6rem;
+  font-size: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
   /* padding: 1% 3%; */
   border-radius: 40px;
-  box-shadow: 0 0 5px 1px gray;
+  box-shadow: 0 1px 0px 0px rgb(121, 145, 146);
 }
 header .joinButton {
-  width: 30%;
+  width: 24%;
   height: 15%;
-  border-radius: 40px;
-  box-shadow: 0 0 5px 1px gray;
 }
 .bottomLeft {
   grid-area: bottomLeft;
@@ -69,14 +82,14 @@ header .joinButton {
   background-image: url("img/family.png");
   background-position: 90%;
   background-origin: border-box;
-  background-size: 55% 100%;
+  background-size: 60% 100%;
   background-repeat: no-repeat;
   position: relative;
 }
 .bottomLeft .joinButton {
   position: absolute;
   left: 20%;
-  top: 25%;
+  top: 20%;
 }
 
 .topRight,
@@ -105,7 +118,7 @@ header .joinButton {
 }
 
 nav {
-  display: flex;
+  display: none;
   justify-content: center;
   position: sticky;
   z-index: 1;
@@ -141,7 +154,7 @@ nav {
 }
 
 .mainContent {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -272,7 +285,7 @@ nav {
   font-size: 0.8rem;
 }
 .gridSection {
-  display: grid;
+  display: none;
   height: 480px;
   /* width: 100%; */
   background-color: lightseagreen;
@@ -310,8 +323,8 @@ nav {
   opacity: 0.4;
 }
 footer {
+  display: none;
   height: fit-content;
-  display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
