--- a/index.css
+++ b/index.css
@@ -349,3 +349,111 @@ footer div span {
 }
 
 /* CONTACT.html */
+.wrapper {
+  width: 100%;
+  margin: 0;
+}
+.contact_Header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(186, 218, 245);
+  height: 30vw;
+  width: 80%;
+  margin: auto;
+  padding: 0 10%;
+  background-image: url(img/man-and-baby.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-origin: content-box;
+}
+.contact_Header h1 {
+  font-size: 3rem;
+}
+nav.contact,
+.navContainer.contact {
+  background-color: white;
+}
+
+main.contact {
+  display: flex;
+  justify-content: space-around;
+  padding: 10% 0;
+  box-sizing: border-box;
+
+  background-color: gainsboro;
+  height: 50vw;
+}
+
+.formList {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.contact article {
+  width: 30%;
+}
+.contact article h1 {
+  font-size: 3rem;
+  padding: 0;
+  margin: 0;
+}
+.formList span {
+  display: block;
+}
+.formList input {
+  width: 100%;
+  height: 1.5rem;
+}
+.formList > div > span {
+  margin-bottom: 2%;
+  color: white;
+}
+.formList input,
+.formList textarea {
+  box-sizing: border-box;
+  padding: 2%;
+  text-indent: 0;
+  width: 100%;
+  border: 0;
+  border-radius: 2px;
+  box-shadow: 0 0 5px 0px gray;
+}
+.formList .joinButton {
+  position: absolute;
+  right: 0;
+  width: 40%;
+  height: 100%;
+}
+.buttonHolder {
+  position: relative;
+  width: 100%;
+  height: 10%;
+}
+
+.mapHolder {
+  position: relative;
+  height: 35vw;
+  background-image: url("img/map.PNG");
+  background-size: cover;
+}
+.visitBox {
+  position: absolute;
+  background-color: orange;
+  height: 45%;
+  width: 25%;
+  left: 10%;
+  top: 10%;
+}
+.visitBox ul {
+  padding: 3% 5%;
+  margin: 0;
+  color: white;
+  list-style-type: none;
+}
+.visitBox h1 {
+  font-size: 2.5rem;
+  letter-spacing: -1px;
+  margin: 0;
+}
