--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  display: flex;
+  display: visible;
   background-color: gold;
   height: 30vh;
 }
@@ -191,7 +191,7 @@ header .joinButton {
 }
 
 nav {
-  display: none;
+  display: flex;
   justify-content: center;
   position: sticky;
   z-index: 1;
@@ -209,7 +209,7 @@ nav {
   margin: auto;
 }
 .navItem {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
