--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 /* index.HTML */
 body {
   background-color: navajowhite;
-
+  --var-mainBG-color: gainsboro;
   margin: auto;
   font-size: 16px;
 }
 
 header {
-  display: visible;
+  display: flex;
   background-color: gold;
   height: 30vh;
 }
@@ -196,32 +196,36 @@ nav {
   position: sticky;
   z-index: 1;
   width: 100%;
+  background-color: var(--var-mainBG-color);
+  height: 5vh;
   top: 0;
-  background-color: gainsboro;
 }
 .navContainer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 5vw;
+  height: 100%;
   width: 60%;
   /* background-color: hotpink; */
   margin: auto;
 }
 .navItem {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 100%;
-  width: 20%;
+  width: 30%;
   text-decoration: none;
   color: rgb(110, 110, 110);
+}
+.hiddenNavItem {
+  display: none;
 }
 .navItem:hover {
   font-weight: bold;
   border-right: solid 1px black;
   border-left: solid 1px black;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   box-sizing: border-box;
   color: black;
   text-shadow: 0 0 5px white;
@@ -553,6 +557,10 @@ main.contact {
   .gridContentContainer > p {
     position: relative;
     opacity: 1;
+  }
+  .hiddenNavItem {
+    display: inline;
+    margin-left: 0%;
   }
 }
 
