--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 body {
   background-color: navajowhite;
   --var-mainBG-color: gainsboro;
+  --var-testBorder: 1px solid black;
   margin: auto;
   font-size: 16px;
 }
@@ -448,15 +449,14 @@ footer div span {
 /* CONTACT.html */
 .wrapper {
   width: 100%;
-  margin: 0;
+  margin: auto;
 }
 .contact_Header {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(186, 218, 245);
-  height: 30vw;
-  width: 80%;
+  height: 15vh;
   margin: auto;
   padding: 0 10%;
   background-image: url(img/man-and-baby.svg);
@@ -466,7 +466,7 @@ footer div span {
   background-size: contain;
 }
 .contact_Header h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 nav.contact,
 .navContainer.contact {
@@ -476,24 +476,35 @@ nav.contact,
 main.contact {
   display: flex;
   justify-content: space-around;
-  padding: 10% 0;
+  padding: 5vh 0;
   box-sizing: border-box;
-
+  /* border: var(--var-testBorder); */
   background-color: gainsboro;
-  height: 50vw;
+  height: 45vh;
 }
 
 .formList {
-  position: relative;
+  /* overflow: hidden; */
+  /* position: relative; */
+  /* box-sizing: border-box; */
+  padding: 1%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+  /* background-color: red; */
+}
+.formList > * {
+  /* background-color: burlywood; */
+  /* border: 1px solid black; */
 }
 .contact article {
-  width: 30%;
+  box-sizing: border-box;
+  /* background-color: yellow; */
+  width: 35%;
 }
 .contact article h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   padding: 0;
   margin: 0;
 }
@@ -501,48 +512,55 @@ main.contact {
   display: block;
 }
 .formList input {
-  width: 100%;
   height: 1.5rem;
 }
 .formList > div > span {
   margin-bottom: 2%;
   color: white;
 }
+.inputHolder,
+.textAreaHolder {
+  width: 100%;
+  /* background-color: aqua; */
+}
 .formList input,
 .formList textarea {
   box-sizing: border-box;
-  padding: 2%;
-  text-indent: 0;
+  /* padding: 2%; */
   width: 100%;
+  text-indent: 0;
   border: 0;
   border-radius: 2px;
   box-shadow: 0 0 5px 0px gray;
-}
-.formList .joinButton {
-  position: absolute;
-  right: 0;
-  width: 40%;
-  height: 100%;
+  resize: none;
 }
 .buttonHolder {
-  position: relative;
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
-  height: 10%;
+  height: 3vh;
+}
+.formList .joinButton {
+  /* position: absolute;
+  right: 0; */
+  width: 150px;
+  height: 100%;
 }
 
 .mapHolder {
   position: relative;
-  height: 35vw;
+  height: 35vh;
   background-image: url("img/map.PNG");
   background-size: cover;
 }
 .visitBox {
   position: absolute;
   background-color: orange;
-  height: 45%;
-  width: 25%;
+  height: 70%;
+  width: 50%;
   left: 10%;
   top: 10%;
+  transition: width 1s;
 }
 .visitBox ul {
   padding: 3% 5%;
@@ -551,7 +569,7 @@ main.contact {
   list-style-type: none;
 }
 .visitBox h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   letter-spacing: -1px;
   margin: 0;
 }
@@ -620,6 +638,19 @@ main.contact {
     /* background-size: contain; */
   }
 
+  .contact_Header h1 {
+    font-size: 3rem;
+  }
+
+  .visitBox {
+    height: 45%;
+    width: 25%;
+  }
+  .visitBox h1 {
+  font-size: 2.3rem;
+  }
+}
+
   /* .child {
     background-color: rgb(186, 218, 245);
     background-image: url("img/child_cropped.png");
@@ -645,5 +676,7 @@ main.contact {
   }
   .gridSection {
     height: 49vw;
+  }
+  .wrapper {
   }
 }
