--- a/index.css
+++ b/index.css
@@ -1,90 +1,96 @@
 /* index.HTML */
+/* Reset */
+*{
+  padding: 0;
+  margin: 0;
+  line-height: 1.6;
+}
 body {
   background-color: navajowhite;
   --var-mainBG-color: gainsboro;
   --var-testBorder: 1px solid black;
   margin: auto;
   font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+h1,h2,h3,h4,h5,h6{
+font-family: 'Times New Roman', Times, serif;
+
+}
+p{
+  font-size: small;
+}
+h1{
+  line-height: 1;
+  font-size: 2.5rem;
+}
+h2{
+  font-size: 2.2rem;
+}
+h3{
+  font-size: 2rem;
+}
+h4{
+  font-size: 1.8rem;
+}
+h5{
+  font-size: 1.5rem;
+}
+h6{
+  font-size: 1.3rem;
 }
 .wrapper {
   max-width: 1000px;
-}
-header {
-  display: flex;
-  background-color: gold;
-  height: 30vh;
-}
-.gridHeader {
-  position: relative;
-  background-color: yellowgreen;
-  height: 100%;
-  width: 100%;
   display: grid;
+  grid-template-columns: repeat(1,1fr);
+  grid-template-rows: 50vh 6vh auto 65vh auto;
+  grid-template-areas: 
+  "header"
+  "nav"  
+  "main"
+  "subsection"
+  "footer"
+  ;
 
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
+}
 
+
+
+
+
+header {
+  grid-area: header;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
   grid-template-areas:
     "topLeft topRight"
     "bottomLeft bottomRight";
 }
-.gridHeader > * {
+header > * {
   position: relative;
 }
 .topLeft {
-  /* width: 60%; */
-
-  /* text-align: center; */
-  /* position: absolute; */
-  /* left: 25%; */
+  grid-area: topLeft;
+  padding: 0 7rem;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-end;
   box-sizing: border-box;
-  grid-area: topLeft;
   background-color: rgb(186, 218, 245);
-  font-family: Times, serif;
 }
 .gridContentContainer {
-  position: relative;
-  box-sizing: border-box;
-  padding: 5%;
-  padding-bottom: 0;
-  width: 80%;
-  height: 90%;
-  overflow: auto;
+ 
 }
 
-.gridContentContainer > span {
-  position: absolute;
-  /* display: inline-block; */
-  /* width: 100%; */
-  font-size: 1.5rem;
-  font-weight: bolder;
-  transition: opacity 1s ease;
-}
+
 
 .gridContentContainer p {
-  position: absolute;
-  padding: 0;
-  margin: 0;
-  font-size: 0.8rem;
-  line-height: 1.3rem;
-  width: 88%;
-  opacity: 0;
-  transition: opacity 1s ease;
+  margin-top: 1rem;
+
 }
-/* .gridContentContainer > * {
-  position: relative;
-  opacity: 1;
-} */
-.topLeft:hover p {
-  opacity: 1;
-}
-.topLeft:hover .gridContentContainer > span {
-  opacity: 0;
-}
+
+
 .topLeft p span {
   color: white;
 }
@@ -96,17 +102,15 @@ header {
   color: black;
   text-decoration: none;
   background-color: white;
-  font-weight: bold;
-  font-size: 0.5rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
   /* padding: 1% 3%; */
   border-radius: 40px;
   box-shadow: 0 1px 0px 0px rgb(121, 145, 146);
+  width: 8rem;
+  height: 2rem;
+
 }
-header .joinButton {
-  width: 24%;
-  height: 15%;
-}
+
 .bottomLeft {
   grid-area: bottomLeft;
   background-color: rgb(186, 218, 245);
@@ -128,13 +132,10 @@ header .joinButton {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1rem;
+  font-size: smaller;
   text-align: center;
 }
-.gridHeader h6 {
-  margin: 0;
-  padding: 0;
-}
+
 .topRight {
   position: relative;
   grid-area: topRight;
@@ -186,37 +187,27 @@ header .joinButton {
   animation: slideInDropDown 4s;
 }
 
-.topRight span:nth-child(2),
-.bottomRight span:nth-child(2) {
-  font-size: 1.8em;
+.topRight h2,
+.bottomRight h2 {
   font-weight: bold;
   color: white;
 }
 
 nav {
+  grid-area: nav;
   display: flex;
   justify-content: center;
-  position: sticky;
+  position: relative;
   z-index: 1;
-  width: 100%;
   background-color: var(--var-mainBG-color);
-  height: 5vh;
   top: 0;
+  padding: 0 10rem;
 }
-.navContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-  width: 60%;
-  /* background-color: hotpink; */
-  margin: auto;
-}
+
 .navItem {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 100%;
   width: 30%;
   text-decoration: none;
   color: rgb(110, 110, 110);
@@ -233,103 +224,79 @@ nav {
   color: black;
   text-shadow: 0 0 5px white;
 }
-
+main{
+  grid-area: main;
+  background-color: white;
+}
 .mainContent {
-  height: 75vh;
-  display: flex;
+  grid-area: top;
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  grid-template-rows: repeat(3,1fr);
+  gap: 5rem;
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-around; */
   background-color: svg;
-  /* height: 75vh; */
-
-  /* padding-bottom: 12%; */
   background: -webkit-linear-gradient(top, grey 45%, orange 10%);
 }
-.mainContent article {
-  /* margin-bottom: 3vw; */
-  /* background-color: aquamarine;
-  border: 1px solid black; */
-  height: 25%;
-  max-width: 80%;
-}
+
 
 .personalSafety {
-  /* max-width: 80%; */
-  display: flex;
-  flex-flow: row;
-  /* background-color: aqua; */
-  /* flex-grow: 1; */
-  /* background-color: teal; */
-  /* height: 30%; */
-}
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: auto;
 
-.personalSafety > div {
+}
+.personalSafety > div{
   display: flex;
   flex-flow: column nowrap;
-  /* background-color: cadetblue; */
-  justify-content: space-around;
-  align-items: center;
-  /* width: 40%;
-  height: 80%; */
-  /* background-color: blueviolet; */
+  justify-content: space-between;
+}
+
+.personalSafety > * {
+  padding-right: 6rem;
 }
 
 .hiddenBlockContent {
   display: none;
 }
 .personalSafety p {
-  overflow: hidden;
+  /* overflow: hidden;
   max-width: 50%;
   padding: 0;
-  margin: 0;
+  margin: 0; */
 }
-.personalSafety span {
-  box-sizing: border-box;
-
+.personalSafety h1 {
   /* background-color: blue; */
   color: white;
-  font-size: 1.9rem;
-  font-family: Times, serif;
-  font-weight: bold;
-}
-.personalSafety .joinButton {
-  width: 45%;
-  height: 15%;
-}
-.portraits {
-  /* width: 80%; */
-  display: flex;
-  align-items: center;
-  /* position: relative; */
-  /* margin: 1% 0; */
-  /* height: 30%; */
-  /* background-color: blue; */
-  font-size: 0.8rem;
-  /* display: inline-block; */
-}
-.portraits > div {
-  /* position: relative; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 2%;
-  padding: 0;
-  height: 100%;
-  width: 33%;
-  background-color: white;
-  border-radius: 2%;
-}
-.portraits p {
-  margin: 0;
-  padding: 0;
+
 }
 
+.portraits {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(1,1fr);
+  gap: 2rem;
+}
+.portraits > div {
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  grid-template-rows: repeat(2,1fr);
+  /* position: relative; */
+  /* margin: 0 2%; */
+  /* width: 33%; */
+  background-color: white;
+  border-radius: 2%;
+  
+}
+
+
 .image_container {
-  height: 50%;
+  margin: 0 0.5rem;
+  /* height: 50%; */
   background-color: cyan;
-  width: 90%;
+  /* width: 90%; */
   background-repeat: no-repeat;
   background-position: bottom;
   transform: translate(0, -13%);
@@ -342,15 +309,16 @@ nav {
 }
 .text_container {
   text-align: center;
-  height: 50%;
-  margin: auto;
-  width: 80%;
+  max-height: 10;
+  /* height: 50%; */
+  /* margin: auto; */
+  /* width: 80%; */
   overflow: hidden;
-  font-size: 0.5rem;
+  /* font-size: 0.5rem; */
   opacity: 0.8;
 }
 .text_container > * {
-  margin: 2%;
+  /* margin: 2%; */
 }
 .child {
   background-color: rgb(186, 218, 245);
@@ -371,26 +339,20 @@ nav {
   background-position: 50% 10px;
 }
 .aboutUs {
-  overflow: auto;
+  padding: 0 12rem;
   box-sizing: border-box;
-  /* background-color: brown; */
   text-align: center;
-  /* background-color: red; */
-  /* height: 30%; */
-  /* width: 65%; */
-  /* margin: 7% auto; */
+}
+.aboutUs p{
+  margin-top: 1rem;
 }
 .aboutUs h1 {
   color: white;
-  font-size: 1.5rem;
 }
-.aboutUs p {
-  font-size: 0.8rem;
-}
+
 .gridSection {
+  grid-area: subsection;
   display: grid;
-  height: 66.655vw;
-  /* width: 100%; */
   background-color: lightseagreen;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 50%);
@@ -428,18 +390,15 @@ nav {
   opacity: 0.4;
 }
 footer {
-  display: flex;
-  height: fit-content;
-  justify-content: center;
-  align-items: center;
+  background-color: rgb(126, 122, 122);
+  grid-area: footer;
   text-align: center;
-  /* background-color: maroon; */
-}
-footer div {
-  width: 100%;
-  background-color: silver;
 }
 footer a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
   text-decoration: none;
   color: black;
 }
@@ -582,9 +541,7 @@ main.contact {
     width: 80vw;
     background-color: red;
   }
-  .gridSection {
-    height: 53.2vw;
-  }
+  
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
